Bug#91904: SQLBINDCOL, BINDING SQL_BIT COLUMN TO SQL_C_CHAR DOESN'T WORK PROPERLY